# AI-Sponsorship-Job-Acquisition-Platform

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
_bmad/: config.toml  config.user.toml  config.user.yaml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: deferred-work.md  spec-admin-cv-upload-resume-registration.md  spec-admin-destructive-safety.md  spec-admin-sponsor-register-ingest.md  spec-atomic-file-writes.md  spec-atomic-write-directory-fsync.md  spec-cv-supersede-dialog-dismiss-fix.md  spec-cv-upload-content-hash-idempotency.md  spec-daily-coach-digest.md  spec-docx-and-ui-outreach-atomic-writes.md  spec-docx-tailoring-concurrency-guard.md  spec-error-display-chained-cause.md  spec-error-display-hardening.md  spec-force-regenerate-control.md  spec-gemini-api-key-secrets-bridge.md  spec-generated-cv-dir-env-var.md  spec-mcp-tool-wrappers.md  spec-mcp-track-application-audit-trail.md  spec-outreach-file-only-storage.md  spec-outreach-orphaned-row-tracking.md  spec-register-busy-timeout-tuning.md  spec-requirements-txt-streamlit-cloud.md  spec-resume-docx-sdt-extraction.md  spec-resume-docx-sdt-table-extraction.md  spec-resume-docx-table-extraction.md  spec-streamlit-data-env-fixture-paths.md  spec-streamlit-view-testability.md  spec-tailored-content-file-only-storage.md  spec-tailoring-llm-error-handling.md  spec-tailoring-llm-failure-logging.md  spec-tailoring-pair-write-honesty.md
_bmad-output/party-mode/: 2026-07-05-session-keepsake.html  2026-07-18-session-keepsake.html
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/bmad-loop/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: v1-scope.md
src/dbcompat/: __init__.py
src/jobs/: atomic_fs.py  cli.py  db.py  digest.py  docx_tailor.py  extract.py  match_score.py  outreach.py  outreach_db.py  pdf_export.py  salary_check.py  sponsor_check.py  tailor.py  tracker.py  (+1 more)
tests/: conftest.py  test_admin.py  test_app.py  test_atomic_fs.py  test_conftest.py  test_dbcompat.py  test_digest_view.py  test_docx_tailor.py  test_github_evidence.py  test_ingest.py  test_jobs_cli.py  test_jobs_db.py  test_jobs_digest.py  test_jobs_extract.py  test_llm_errors.py  test_match_score.py  test_mcp_server.py  test_mcp_tools.py  test_normalize.py  test_outreach.py  test_outreach_db.py  test_outreach_message_history_display.py  test_pdf_export.py  test_register_overrides.py  test_resume_db.py  test_resume_extract.py  test_roadmap_db.py  test_roadmap_planner.py  test_salary_check.py  test_skip_sponsor_check.py  test_sponsor_check.py  test_tailor.py  test_tracker.py  test_ui_actions.py  test_views_error_display.py
views/: admin.py  digest.py  intake.py  jobs_list.py  roadmap.py  theme.py
(+59 files in other folders)
