[project]
name = "sponsorship-job-platform"
version = "0.1.0"
description = "Personal AI job-acquisition platform for UK Skilled Worker sponsorship search"
requires-python = ">=3.10"
dependencies = ["google-genai", "pydantic>=2.0", "python-dotenv", "python-docx", "streamlit"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/register", "src/jobs", "src/resume", "src/roadmap"]

[tool.pytest.ini_options]
pythonpath = ["src"]
