[project]
name = "sponsorship-job-platform"
version = "0.1.0"
description = "Personal AI job-acquisition platform for UK Skilled Worker sponsorship search"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "pydantic>=2.0",
    "python-dotenv",
    "python-docx",
    "streamlit>=1.48",  # st.dialog's on_dismiss (views/admin.py) needs 1.48+
    "mcp>=1.28.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/register", "src/jobs", "src/resume", "src/roadmap", "src/mcp_server"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv]
system-certs = true
