[project]
name = "sponsorship-job-platform"
version = "0.1.0"
description = "Personal AI job-acquisition platform for UK Skilled Worker sponsorship search"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "pydantic>=2.0",
    "python-dotenv",
    "python-docx",
    "streamlit>=1.48",  # st.dialog's on_dismiss (views/admin.py) needs 1.48+
    "mcp>=1.28.1",
    "libsql>=0.1.11",  # Turso-backed persistence - see .python-version: no Windows wheel above cp313 yet
    "truststore",  # httpx/certifi's bundled CAs miss this machine's trust anchor - same root cause [tool.uv] system-certs already works around for package installs (see app.py/jobs/cli.py's inject_into_ssl() call)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/register", "src/jobs", "src/resume", "src/roadmap", "src/mcp_server", "src/dbcompat", "src/llm_errors"]

[tool.pytest.ini_options]
# "." (project root) lets views/*.py import sibling modules like
# views.theme under AppTest - a real `streamlit run app.py` already has
# root on sys.path from its own launch (inherited by every page pg.run()
# execs in the same process), but AppTest.from_file() execs a view in
# isolation with no such inheritance, so tests need it added explicitly.
pythonpath = ["src", "."]

[tool.uv]
system-certs = true
